Mon Apr 14 12:59:23 2003  Nicola Pero  <n.pero@mi.flashnet.it>

	Implemented support for preprocessed Info.plists in applications.
	* config.make.in (GENERAL_CPP): New variable.
	* rules.make (ALL_CPLISTFLAGS): New flags.
	(%.plist): Added rule to generate %.plist from %.cplist by running
	the preprocessor.
	* messages.make (ECHO_PREPROCESSING): New message.
	* Instance/application.make: If xxx_PREPROCESS_INFO_PLIST is set
	to yes in the user makefile, automatically depend on
	xxxInfo.plist, which is then automatically generated from
	xxxInfo.cplist.	
	* Master/application.make (_PLIST_INFO_FILES): New variable.
	(internal-clean): Remove info plist files generated by the
	preprocessor.
	
Fri Apr 11 12:38:44 2003  Nicola Pero  <n.pero@mi.flashnet.it>

	* GNUmakefile.in (install): Bug fix - install fixpath.sh from the
	local directory, not from the source directory.

Sun Apr  6 02:25:07 2003  Nicola Pero  <n.pero@mi.flashnet.it>

	* GNUmakefile.in (install): Bug fix - install GNUstep-reset.sh
	from the source directory, not from the local directory.

Mon Mar 31 18:43:07 2003  Nicola Pero  <n.pero@mi.flashnet.it>

	* Instance/framework.make (build-framework-dirs): Do not create
	the symlink from inside derived_src to the headers if there are no
	headers; remove the file before creating the symlink.
	
2003-03-23 Richard Frith-Macdonald <rfm@gnu.org>

	* Merged 1.6.0 branch changes in

Mon Mar 10 12:51:20 2003  Nicola Pero  <n.pero@mi.flashnet.it>

	* rules.make: Disable all built-in SUFFIXES and all built-in rules
	with a % target -- for performance.

Wed Feb 26 18:34:37 2003  Nicola Pero  <n.pero@mi.flashnet.it>

	* Instance/application.make ($(APP_INFO_PLIST_FILE)): Implemented
	merging the xxxInfo.plist into Info.plist on Apple.  Use
	CFBundleIconFile, and not NSIcon, on Apple.  Quote full path of
	xxxInfo.plist file.

2003-03-17  Adam Fedor  <fedor@gnu.org>

	* Version: 1.6.0

2003-03-14  Adam Fedor  <fedor@gnu.org>
