@@ -1,3 +1,7 @@
+Tue Apr 22 15:27:02 2003  Nicola Pero  <n.pero@mi.flashnet.it>
+
+	* GNUstep.csh.in: Quote all values of setenv, set, source calls.
+
 Mon Apr 14 12:59:23 2003  Nicola Pero  <n.pero@mi.flashnet.it>
 
 	Implemented support for preprocessed Info.plists in applications.
